--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,9 +1,49 @@
 @font-face {
-  font-family: 'Rubik';
+  font-family: 'Roboto';
   font-weight: 400;
   font-style: normal;
-  src: local('Rubik'),
-  url('../fonts/Rubik-Regular.woff2') format('woff2'),
-  url('../fonts/Rubik-Regular.woff') format('woff');
+  src: local('Roboto'),
+  url('../fonts/Roboto-Regular.woff2') format('woff2'),
+  url('../fonts/Roboto-Regular.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-style: normal;
+  src: local('Roboto'),
+  url('../fonts/Roboto-Medium.woff2') format('woff2'),
+  url('../fonts/Roboto-Medium.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-style: normal;
+  src: local('Roboto'),
+  url('../fonts/Roboto-Bold.woff2') format('woff2'),
+  url('../fonts/Roboto-Bold.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Quicksand';
+  font-weight: 400;
+  font-style: normal;
+  src: local('Quicksand'),
+  url('../fonts/Quicksand-Regular.woff2') format('woff2'),
+  url('../fonts/Quicksand-Regular.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Quicksand';
+  font-weight: 500;
+  font-style: normal;
+  src: local('Quicksand'),
+  url('../fonts/Quicksand-Medium.woff2') format('woff2'),
+  url('../fonts/Quicksand-Medium.woff') format('woff');
   font-display: swap;
 }
