--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,4 +1,27 @@
+%quicksand-400{
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
+}
+
+%quicksand-500{
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
+}
+
 %roboto-400{
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
+
+%roboto-500{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+
+%roboto-700{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
+
+$accent: #fe3e57;
+$title: #29282d;
