--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,299 @@
 @import 'vars';
+@import 'libs';
 @import 'fonts';
 @import 'reset';
 @import 'global';
 
+.header{
+  &__inner{
+    padding: 40px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &--404{
+    background-color: #f6f6f6;
+  }
+}
 
+.menu{
+  margin-right: 28px;
+  &__list{
+    display: flex;
+  }
+  &__list-item{
+    color: #29282d;
+  }
+  &__list-item + &__list-item{
+    margin-left: 35px;
+  }
+  &__list-link{
+    @extend %roboto-400;
+    text-transform: uppercase;
+    padding: 5px 2px;
+    transition: all .3s;
+    &--active{
+      @extend %roboto-700;
+      color: $accent;
+      border-bottom: 1px solid $accent;
+    }
+    &:hover{
+      color: $accent;
+    }
+  }
+}
+
+.user-nav{
+  display: flex;
+  &__link{
+    position: relative;
+  }
+  &__link + &__link{
+    margin-left: 25px;
+  }
+  &__num{
+    position: absolute;
+    top: -8px;
+    right: -14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $accent;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+    color: #fff;
+  }
+}
+
+.footer{
+  background-color: #f6f6f6;
+  color: #8d8d8d;
+}
+
+.footer-top{
+  display: grid;
+  grid-template-columns: 270px 170px 170px auto;
+  grid-gap: 30px;
+  padding: 120px 0 33px;
+  &__logo{
+    display: block;
+    width: 153px;
+    margin-bottom: 25px;
+  }
+  &__logo-img{
+    width: 100%;
+  }
+  &__address, 
+  &__mail,
+  &__phone{
+    display: block;
+    line-height: 36px;
+  }
+  &__mail,
+  &__phone{
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+  &__address{
+    max-width: 250px;
+  }
+  &__phone{
+    margin-bottom: 30px;
+  }
+  &__social-list{
+    display: flex;
+    align-items: center;
+  }
+  &__social-item + &__social-item{
+    margin-left: 20px;
+  }
+  &__social-link{
+    path{
+      transition: all .3s;
+    }
+    &:hover path{
+      fill: $accent;
+    }
+  }
+  &__title{
+    @extend %roboto-500;
+    font-size: 22px;
+    line-height: 22px;
+    color: $title;
+    margin-bottom: 36px;
+  }
+  &__list-item + &__list-item{
+    margin-top: 16px;
+  }
+  &__list-link:hover{
+    text-decoration: underline;
+  }
+  &__text{
+    margin-bottom: 30px;
+  }
+  &__form{
+    display: grid;
+    grid-template-columns: auto 140px;
+    grid-gap: 10px;
+  }
+  &__form-input{
+    padding: 15px 17px;
+    background-color: #fff;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    border: none;
+  }
+  &__form-btn{
+    padding: 15px 26px;
+    background-color: $accent;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    border: none;
+    @extend %roboto-400;
+    line-height: 20px;
+    color: #fff;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+}
+
+.footer-bottom{
+  padding: 27px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #ececec;
+  font-size: 12px;
+  &__accept{
+    display: flex;
+    align-items: center;
+  }
+  &__accept-text{
+    margin-right: 20px;
+  }
+  &__accept-img + &__accept-img{
+    margin-left: 25px;
+  }
+}
+
+.top{
+  &__container{
+    max-width: 1700px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 125px 0 138px;
+    text-align: center;
+  }
+  &__title{
+    @extend %roboto-400;
+    font-size: 48px;
+    color: #15181d;
+    text-transform: uppercase;
+    margin-bottom: 16px;
+  }
+}
+
+.modal{
+  display: flex;
+  justify-content: center;
+  padding: 115px 0 118px;
+  &__inner{
+    width: 570px;
+  }
+  &__links{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+  &__link{
+    @extend %roboto-400;
+    font-size: 22px;
+    color: #909090;
+    &--active{
+      @extend %roboto-700;
+      color: $accent;
+    }
+  }
+  &__link + &__link{
+    margin-left: 60px;
+  }
+  &__form{
+    color: #8d8d8d;
+  }
+  &__label{
+    display: block;
+    margin-bottom: 36px;
+  }
+  &__input{
+    margin-top: 10px;
+    padding: 20px 15px;
+    background-color: #f6f6f6;
+    border: none;
+    width: 100%;
+  }
+  &__btn{
+    width: 100%;
+    padding: 20px;
+    border: none;
+    background-color: #292929;
+    @extend %roboto-400;
+    color: #fff;
+    line-height: 20px;
+    letter-spacing: 2.7px;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+  &__forgot{
+    display: inline-block;
+    margin-top: 15px;
+    color: $accent;
+  }
+  &__text{
+    line-height: 26px;
+    margin: -10px 0 36px;
+    p + p{
+      margin-top: 26px;
+    }
+  }
+}
+
+.page-404{
+  padding: 120px 0;
+  &__inner{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &__content{
+    max-width: 570px;
+    width: 100%;
+  }
+  &__title{
+    @extend %roboto-700;
+    font-size: 48px;
+    line-height: 26px;
+    color: #28384f;
+    margin-bottom: 38px;
+  }
+  &__text{
+    max-width: 470px;
+    line-height: 26px;
+    color: #8d8d8d;
+    margin-bottom: 56px;
+  }
+  &__link{
+    display: inline-block;
+    padding: 15px 33px;
+    background-color: $accent;
+    @extend %roboto-400;
+    color: #fff;
+    line-height: 20px;
+    text-transform: uppercase;
+    box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
+  }
+}
 
 @import 'media';
